<resources>
    <string name="app_name">Northampton Travels</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signup">New User? Signup</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="confirmPassword">confirm password</string>

    <string name="empty">Empty</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>

    <string name="home">Home</string>
    <string name="myReview">My Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>

    <string name="readMore">Read More</string>

    <string name="addReview">Add Review</string>

    <string name="tourPackage">Package</string>
    <string name="select">Select the package</string>
    <string name="rate">Rating</string>
    <string name="description">Review</string>
    <string name="photos">Add Photos</string>
    <string name="visited">Visited</string>
    <string name="posted">Posted</string>
    <string name="food">Food</string>
    <string name="transport">Transport</string>
    <string name="accommodation">Accommodation</string>
    <string name="all">All</string>
    <string name="overall">Overall</string>
    <string name="foodBrief">We always like to have your feedback.
        Please let us know your satisfactory level of meals you had during the tour.
        So we can give our best service in future.</string>
    <string name="transportBrief">We always like to have your feedback.
        Please let us know your satisfactory level about transport facilities we provided.
        So we can give our best service in future.</string>
    <string name="accommodationBrief">We always like to have your feedback.
        Please let us know your satisfactory level of accommodation you had during the tour.
        So we can give our best service in future.</string>

    <string name="likes">likes</string>
    <string name="dislikes">dislikes</string>
    <string name="reply">reply</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>

    <!--    warnings-->
    <string name="selectPackage">Please Select Package</string>
    <string name="addRating">Please Add Rating</string>
    <string name="alreadyHere">You are already here</string>
    <string name="noLoading">Cannot load! Retry</string>
    <string name="commentPlease">Please type a reply</string>
    <string name="passwordMissmatch">Password mismatch</string>
    <string name="emailPlease">Please Enter Email</string>
    <string name="confirmPasswordPlease">Please Re-enter Password</string>
    <string name="passwordPlease">Please Enter Password</string>
    <string name="usernamePlease">Please Enter Username</string>
    <string name="firstNamePlease">Please Enter First Name</string>
    <string name="deleteConfirmation">Do you want to delete the review?</string>
    <string name="logoutConfirmation">Do you want to logout?</string>

    <!--    places list-->
    <string-array name="tourPackage">
        <item>Please Select Package</item>
        <item>England,Scotland and Ireland</item>
        <item>United Kingdom and Ireland</item>
        <item>Britain and Ireland Delight</item>
        <item>Britain and Ireland Explorer</item>
        <item>Wonders of Britain and Ireland</item>
        <item>Best of UK and Ireland</item>
        <item>Great Britain</item>
        <item>Grand Tour of Britain and Ireland</item>
        <item>The Best of Britain and Ireland</item>
        <item>Essential Britain and Ireland</item>
        <item>Delve Deep: Britain and Ireland</item>
        <item>England, Scotland and Wales</item>
        <item>England, Scotland Heritage</item>
        <item>Romantic Britain and Ireland</item>
        <item>Aonghus Youth</item>
        <item>Irish Highlights (Summer, 7 Days)</item>
        <item>3 Day Isle of Skye</item>
        <item>Best of Scotland (Summer, 7 Days)</item>
        <item>A life en Rose (16 destinations)</item>
        <item>3 Day Loch Nees and Skye</item>
        <item>Great Tour of Ireland</item>
        <item>Highland Fling</item>

    </string-array>

</resources>