<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:orientation="vertical"
tools:context=".fragment.SecondFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:gravity="center_horizontal"
        style="@style/headingTxt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foodBrief"
        android:gravity="center_horizontal"
        style="@style/titleTxt"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/twenty"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <TextView
            style="@style/labelTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate" />

        <TextView
            style="@style/labelTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/twenty">

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/ten"
            android:contentDescription="@string/rate"
            android:numStars="5"
            app:theme="@style/MyAppTheme.RatingBar" />

        <EditText
            android:id="@+id/etReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/labelTxt"
            android:maxLines="10" />



    </LinearLayout>


</LinearLayout></LinearLayout>