<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ThirdFragment">


    <TextView
        style="@style/headingTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/transport" />

    <TextView
        style="@style/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/transportBrief" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/twenty"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <TextView
                style="@style/labelTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate" />

            <TextView
                style="@style/labelTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/twenty"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rating_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/ten"
                android:contentDescription="@string/rate"
                android:numStars="5"
                app:theme="@style/MyAppTheme.RatingBar" />

            <EditText
                android:id="@+id/et_review"
                style="@style/labelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="10" />


        </LinearLayout>


    </LinearLayout>
</LinearLayout>