<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.UpdateReviewActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPackage"
                        style="@style/listTxt"
                        android:layout_marginTop="@dimen/twenty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tourPackage" />

                    <TextView
                        style="@style/listTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overall"
                        android:textColor="@color/button_theme" />

                    <TextView
                        style="@style/listTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:textColor="@color/button_theme" />

                    <TextView
                        style="@style/listTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transport"
                        android:textColor="@color/button_theme" />

                    <TextView
                        style="@style/listTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accommodation"
                        android:textColor="@color/button_theme" />

                    <TextView
                        style="@style/listTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visited"
                        android:textColor="@color/button_theme" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:layout_marginTop="@dimen/twenty"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spPackage"
                        style="@style/listTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/tourPackage" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="@dimen/ten"
                        android:contentDescription="@string/rate"
                        android:numStars="5"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        app:theme="@style/MyAppTheme.RatingBar" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingFood"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="@dimen/ten"
                        android:contentDescription="@string/rate"
                        android:numStars="5"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        app:theme="@style/MyAppTheme.RatingBar" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingTravel"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="@dimen/ten"
                        android:contentDescription="@string/rate"
                        android:numStars="5"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        app:theme="@style/MyAppTheme.RatingBar" />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingAccommodation"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="@dimen/ten"
                        android:contentDescription="@string/rate"
                        android:numStars="5"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        app:theme="@style/MyAppTheme.RatingBar" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/dpVisited"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/fifty"
                            android:src="@drawable/ic_calendar_24" />


                        <TextView
                            android:id="@+id/tvMonth"
                            style="@style/listTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <TextView
                style="@style/listTxt"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overall"/>

            <EditText
                android:id="@+id/etReview"
                style="@style/labelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />
            <TextView
                style="@style/listTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food"/>

            <EditText
                android:id="@+id/etFood"
                style="@style/labelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food" />
            <TextView
                style="@style/listTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transport"/>

            <EditText
                android:id="@+id/etTransport"
                style="@style/labelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transport" />

            <TextView
                style="@style/listTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accommodation"/>

            <EditText
                android:id="@+id/etAccommodation"
                style="@style/labelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accommodation" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            style="@style/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:imeOptions="actionDone"
            android:text="@string/back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            style="@style/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/button_theme"
            android:imeOptions="actionDone"
            android:text="@string/update" />
    </LinearLayout>
</LinearLayout>

<com.google.android.material.navigation.NavigationView
    android:id="@+id/navView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/nav_drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>